# LevelCrush.Bridge

./: .env.dynasty.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_SUMMARY.md  LICENSE  MARKET_ANALYTICS_CHANGES.md  README.md  sqlx-migrate.toml  test_db.sql
.githooks/: README.md  pre-commit
.github/workflows/: dynasty-trader-tests.yml
discord-bot/: .env.example  .gitignore  INTEGRATION.md  README.md  package-lock.json  package.json  tsconfig.json
discord-bot/src/: deploy-commands.ts  index.ts
docs/: api-examples.md  discord-integration.md  dynasty-trader-migration-guide.md  dynasty-trader-progress-summary.md  setup-dynasty-trader.md  timescaledb-guide.md
docs/game-design/: EXPLORATION_CLAUDE.md  FILE_INDEX.md  PROJECT_OVERVIEW.md  README.md  recommendations-hybrid.md
examples/: api_requests.http
frontend/dynasty-trader/: .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: 001_initial_schema.sql
migrations/postgres/: 00011_add_discord_id_to_users.sql  00012_discord_guild_configs.sql  001_initial_dynasty_schema.sql  002_timescaledb_setup.sql  003_items_and_seed_data.sql  004_death_events.sql  20240101000001_initial_dynasty_schema.sql  20240101000002_timescaledb_setup.sql  20240101000003_items_and_seed_data.sql  (+8 more)
scripts/: run.sh  run_dynasty_migrations.sh
src/: app_state.rs  app_state_v2.rs  lib.rs  lib_v2.rs  main.rs
tests/: dynasty_integration_test.rs  market_integration_test.rs  market_unit_tests.rs  websocket_test.rs
(+143 files in other folders)
