[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
authors = ["Bridge Team"]
description = "A Rust-based RESTful API server for unified game user interactions"
license = "MIT"

[[bin]]
name = "test_db"
path = "src/bin/test_db.rs"

[[bin]]
name = "test_logging"
path = "src/bin/test_logging.rs"

[[bin]]
name = "dynasty_trader"
path = "src/bin/dynasty_trader.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "migrate_postgres"
path = "src/bin/migrate_postgres.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "uuid", "macros", "time", "migrate", "rust_decimal"], default-features = false }
rust_decimal = { version = "1.32", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# OAuth
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.16", features = ["derive"] }
base64 = "0.21"
